# Self-Adaptive-K8s-Microservices

./: .env.example  NEXT_STEPS.md  README.md  WHITEPAPER.md  pyproject.toml  requirements.txt
docs/architecture/: kubernetes-execution-layer.md  llm-reasoning-layer.md  mape-k-design.md  safety-validator.md  system-overview.md
docs/diagrams/: architecture.drawio  control-loop.drawio  deployment-view.drawio
docs/experiments/: baselines.md  evaluation-plan.md  metrics.md  workload-design.md
evaluation/: README.md
evaluation/metrics/: adaptation_metrics.py  cost_metrics.py  latency_metrics.py  models.py  resource_metrics.py  stability_metrics.py
evaluation/reports/: charts.py  generate_report.py  report_models.py  tables.py
evaluation/statistics/: bonferroni.py  confidence_intervals.py  effect_size.py  paired_t_test.py
experiments/configs/: flash_crowd.yaml  gradual_ramp.yaml  hpa_baseline.yaml  llm_adaptive_controller.yaml  pid_controller.yaml  steady_state.yaml
experiments/runners/: collect_results.py  experiment_models.py  run_baseline.py  run_experiment.py  run_workload.py
infra/local/: kind-cluster.yaml  minikube-setup.md
kubernetes/controller/: configmap.yaml  deployment.yaml  role-binding.yaml  role.yaml  service-account.yaml
kubernetes/hpa/: online-boutique-hpa.yaml  sockshop-hpa.yaml
kubernetes/monitoring/: grafana-dashboard.json  prometheus-values.yaml  servicemonitor.yaml
kubernetes/namespaces/: experiment.yaml
scripts/: cleanup.sh  deploy_controller.sh  deploy_monitoring.sh  deploy_workloads.sh  reset_experiment.sh  setup_cluster.sh
(+110 files in other folders)
