[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "self-adaptive-microservices"
version = "0.1.0"
description = "Self-adaptive controller for Kubernetes-based microservices."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "kubernetes>=29.0.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
